[package]
name = "teach"
version = "0.1.1"
authors = ["inakleinbottle <sam@inakleinbottle.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.99", features=["derive"] }
toml = "0.5.3"
structopt = "0.2.18"
failure = "0.1.5"
latex = "0.3.1"
log = "0.4.8"
confy = "0.3.1"
lazy_static = "1.4.0"
tempfile = "3.1.0"
simple_logger = "1.3.0"
outparse = { git = "https://github.com/inakleinbottle/texoutparse-rs.git" }
toml_edit = "0.1.5"
chrono = "0.4.9"
